trying to implement active listing

--- a/web50/projects/2020/x/commerce/auctions/templates/auctions/index.html
+++ b/web50/projects/2020/x/commerce/auctions/templates/auctions/index.html
@@ -3,5 +3,26 @@
 {% block body %}
     <h2>Active Listings</h2>
 
-    TODO
+    <ul>
+        {% for listing in listings %}
+            <li>
+                 <h2>{{listing.title}}</h2> 
+                 {{listing.description}}
+                
+                 id: {{ listing.listingid }}
+                 {% with id=listing.listingid %}
+                 {{id}}
+                 hello: {{bid.id}}
+                 {%endwith%}  
+
+                 
+                 
+                
+
+                 {% if listing.imageurl %}
+                    <img src={{listing.imageurl}}/>
+                 {% endif %}
+            </li>
+        {% endfor %}
+    </ul>
 {% endblock %}
