lising page feature work on progress stable commit

--- a/web50/projects/2020/x/commerce/auctions/templates/auctions/index.html
+++ b/web50/projects/2020/x/commerce/auctions/templates/auctions/index.html
@@ -7,8 +7,8 @@
         {% for listing in listings %}
             <li>
                  
-                 <!--h2><a href="{% url 'listingpage' listing_id=listing.listingid  %}">{{listing.title}}</a></h2-->
-                 <h2><a href="{% url 'listingpage' listing_id=listing.listingid  %}?{{listing|urlencode}}">{{listing.title}}</a></h2> 
+                 
+                 <h2><a href="{% url 'listingpage'  %}?{{listing|urlencode}}">{{listing.title}}</a></h2> 
                  Description: {{listing.description}}
                 <br>
                  Listing ID: {{ listing.listingid }}
