lising page feature work on progress stable commit 2

--- a/web50/projects/2020/x/commerce/auctions/templates/auctions/index.html
+++ b/web50/projects/2020/x/commerce/auctions/templates/auctions/index.html
@@ -17,7 +17,7 @@
                  Current Price: {{listing.hbid   }}
                  
 
-        urlencode                 {% if listing.imageurl %}
+                {% if listing.imageurl %}
                     
                     <img src={{listing.imageurl}} />
                  {% endif %}
