lising page add to watchlist feature implemented semi stable commit 2

--- a/web50/projects/2020/x/commerce/auctions/templates/auctions/index.html
+++ b/web50/projects/2020/x/commerce/auctions/templates/auctions/index.html
@@ -5,6 +5,7 @@
 
     <ul>
         {% for listing in listings %}
+            {% if listing.closed == False %}
             <li>
                  
                  
@@ -22,6 +23,7 @@
                     <img src={{listing.imageurl}} />
                  {% endif %}
             </li>
+            {% endif %}
         {% endfor %}
 
 
