commenting feature with resubmisssion problem  solved to some extend using csrftoken global variable checking

--- a/web50/projects/2020/x/commerce/auctions/templates/auctions/listingpage.html
+++ b/web50/projects/2020/x/commerce/auctions/templates/auctions/listingpage.html
@@ -87,10 +87,11 @@
             
             {%for commnt in cmntz%}
                     <br>
-                    this here
-                    {{commnt.comment}}
-                    {{commnt.username}}
+                    <br>
+                    {{commnt.comment}} by 
+                    {{commnt.username}} at
                     {{commnt.datetim}}
+
             {%endfor%}
             
 
