close auction user won message display implemented. made performance improvements in querying database

--- a/web50/projects/2020/x/commerce/auctions/templates/auctions/listingpage.html
+++ b/web50/projects/2020/x/commerce/auctions/templates/auctions/listingpage.html
@@ -67,7 +67,8 @@
 
                                         <input type="hidden" name="openauction" value="form1">
                                         <input type="submit",id='openauction',name= "openauction", value="Open Auction">
-                                    
+                            {% elif biduser == True %}
+                                <h3> You Won The Auction </h3>      
                             {%endif%}
                         </form>
                     {% endif %}
