--- a/web50/projects/2020/x/commerce/auctions/templates/auctions/layout.html
+++ b/web50/projects/2020/x/commerce/auctions/templates/auctions/layout.html
@@ -27,6 +27,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'createlisting' %}">Create Listing</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'watchlistpage' %}">Watch List</a>
+                </li>
+
+                
+
             {% else %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'login' %}">Log In</a>
