--- a/web50/projects/2020/x/commerce/auctions/templates/auctions/layout.html
+++ b/web50/projects/2020/x/commerce/auctions/templates/auctions/layout.html
@@ -41,6 +41,9 @@
                     <a class="nav-link" href="{% url 'register' %}">Register</a>
                 </li>
             {% endif %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'category' %}">Categories</a>
+            </li>
         </ul>
         <hr>
         {% block body %}
